osfacts/tests/snapshots/cli_contract__fixture_any_v4.snap
---
source: tests/cli_contract.rs
expression: redact_tsv(&h.tsv)
---
V	1
P	<PID>	<PPID>	osfacts-listener
L	<PID>	<PORT>	00000000
