osfacts/tests/snapshots/cli_contract__fixture_any_v6.snap
---
source: tests/cli_contract.rs
expression: redact_tsv(&h.tsv)
---
V	2
P	<PID>	<PPID>	osfacts-listener
L	claimed	<PID>	<UID>	<PORT>	00000000000000000000000000000000
