osfacts/tests/snapshots/cli_contract__fixture_loopback_v4.snap
---
source: tests/cli_contract.rs
expression: redact_tsv(&h.tsv)
---
V	2
P	<PID>	<PPID>	osfacts-listener
L	claimed	<PID>	1000	<PORT>	7f000001
