osfacts/tests/snapshots/cli_contract__fixture_v4_mapped_loopback.snap
---
source: tests/cli_contract.rs
expression: redact_tsv(&h.tsv)
---
V	1
P	<PID>	<PPID>	osfacts-listener
L	<PID>	<PORT>	00000000000000000000ffff7f000001
